# VRP-Research

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: README.md
reports/: config_log.csv
reports/tables/: phase1_estimators.md  phase1_open_artifact.md  phase1_summary.md  phase2_h1.csv  phase2_h1.md  phase2_h22.csv  phase2_h22.md  phase2_h5.csv  phase2_h5.md  phase3_h1.csv  phase3_h1.md  phase3_h22.csv  phase3_h22.md  phase3_h5.csv  phase3_h5.md  phase4_h22.csv  phase4_h22.md  phase4_lgbm_importance.md  phase4_mcs.md  phase5_breakeven.csv  phase5_perf.md  phase6_drawdowns_always_short.md  phase6_drawdowns_headline.md  phase6_risk.md  phase6_significance.md  phase7_holdout_h22.md  phase7_significance_holdout.md  phase7_strategy_holdout.md
scripts/: download_raw.py
src/: __init__.py  config.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py  run_phase7.py
src/backtest/: costs.py  engine.py  metrics.py  signals.py
src/data/: align.py  raw_loaders.py  validate.py
src/evaluation/: config_log.py  dm.py  losses.py  mcs.py  mz.py  walkforward.py
src/features/: build.py  rv.py
src/models/: baselines.py  garch.py  garch_cache.py  har.py  lgbm.py
src/plotting/: phase1.py  phase2.py  phase3.py  phase5.py  phase6.py  phase7.py  style.py
tests/: test_alignment.py  test_backtest.py  test_har_features.py  test_losses_dm.py  test_raw_loaders.py  test_rv_estimators.py  test_validate.py  test_walkforward.py
