[project]
name = "vrp-research"
version = "0.1.0"
description = "Realized volatility forecasting and the variance risk premium: does a forecast add value over always-short-vol, net of transaction costs?"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "pyarrow>=17",
    "scipy>=1.14",
    "statsmodels>=0.14.2",
    "arch>=7.0,<8",
    "lightgbm>=4.3,<5",
    "matplotlib>=3.9",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs>=2.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY", "RUF"]

[tool.mypy]
# No python_version pin: mypy analyzes against the interpreter running it, so each
# CI leg checks its own target. Pinning to 3.10 fails on 3.12, where numpy's
# bundled stubs use PEP 695 `type` statements a 3.10 target cannot parse.
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
